//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine_examples.enrichment;

option (type_url_prefix) = "type.spine3.org";
option java_package="org.spine3.examples.enrichment.events";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";
import "spine/event_annotations.proto";
import "spine/validate.proto";
import "spine/users/user_id.proto";
import "spine/people/person_name.proto";

message UserAccountCreated {
    spine.users.UserId user_id = 1;
    spine.people.PersonName name = 2 [(required).value = true];
}

// An event, which reports suspension of a user account.
// The only information we really need to know about the event is the ID of the user.
message UserAccountSuspended {
    spine.users.UserId user_id = 1;

    // An enrichment for the event, which allows to show the name of the suspended user somewhere in UI.
    message Enrichment {
        spine.people.PersonName name = 2 [(by) = "user_id"];
    }
}

